src/controls/form.scss
form {
    overflow: hidden;

    fieldset {
        border: 0;
        padding: 0;
        margin: 0;
    }

    details.group {
        margin-top: var(--space-xs);

        &+details.group {
            margin-top: 0;
        }
    }

    label {
        display: flex;
        align-items: center;
        justify-content: flex-start;
        gap: var(--space-xs);
        margin-top: var(--space-xs);
        color: var(--color-text);

        &:first-child {
            margin-top: 0;
        }

        &:last-child {
            margin-bottom: var(--space-xs);
        }

        &>:first-child {
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            text-align: right;
            text-transform: capitalize;
            width: var(--form-label-width);
            min-width: var(--form-label-width);
        }

        &>:last-child:not(input[type="checkbox"], input[type="radio"]) {
            flex-grow: 1;
        }
    }

    footer {
        display: flex;
        gap: .5rem;
        align-items: center;
        flex-direction: row;
        justify-content: flex-end;

        padding: var(--space) 0;
        margin-top: auto;
    }
}

